fix: remove scrollbar

--- a/src/components/StudentCohortTeachersList/style.css
+++ b/src/components/StudentCohortTeachersList/style.css
@@ -5,10 +5,7 @@ hr {
 .student-list {
   list-style: none;
   padding: 0;
-  overflow-y: scroll;
-  max-height: 700px;
 }
-
 
 .user-list-item {
   display: flex;
